--- a/src/components/NewsCard.css
+++ b/src/components/NewsCard.css
@@ -2,10 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Verdana, Geneva, sans-serif;
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: Verdana, Geneva, sans-serif;
   background-color: #f4f4f9;
 }
 
@@ -27,6 +28,7 @@ h1 {
 .res-card {
   /* width: 300px;
   height: 400px; */
+  
   border: 1px solid transparent;
   border-radius: 3px;
   padding: 5px 10px;
@@ -103,29 +105,7 @@ h1 {
   transform: translateY(-2px);
   color: black;
 }
-.hover-3 {
-  display: block;
-  margin-top: 10px;
-  color: #007bff;
-  text-decoration: none;
-  font-size: 16px;
-  cursor: pointer;
-  display: inline-flex;
-  padding-top: 10px;
-  padding-bottom: 5px;
-  overflow: hidden;
-}
-.hover-3:before {
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 2px;
-  background: #492059;
-  transform: translateX(-100%);
-}
-.hover-3:hover:before {
-  transform: translateX(0);
-}
+
 
 .pagination {
   display: flex;
@@ -142,7 +122,7 @@ h1 {
 .pagination li a {
   cursor: pointer;
   text-decoration: none;
-  color: #007bff;
+  color: #ff742b;
   padding: 8px 12px; /* Reduced padding */
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -150,13 +130,15 @@ h1 {
 }
 
 .pagination li a:hover {
-  background-color: #ddd;
+  background-color: #ff742b;
+  color: white;
+  border-radius: 4px;
 }
 
 .pagination .active a {
-  background-color: #007bff;
+  background-color: #ff742b;
   color: white;
-  border: 1px solid #007bff;
+  border: 1px solid transparent;
 }
 
 .loading {
@@ -189,7 +171,7 @@ h1 {
   }
 
   .article-list-item {
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 500;
     padding: 10px;
     border-bottom: 1px solid #ddd;
@@ -219,7 +201,7 @@ h1 {
     margin-top: 10px;
     color: #007bff;
     text-decoration: none;
-    font-size: 12px;
+    font-size: 13px;
     cursor: pointer;
   }
 
